tests/paczka1/fuzzy1/73056676.err
Error in line 19: e12u6I A655 81,9
Error in line 22: jrJXW A296 83,21
Error in line 21: e12u6I S946 8,6
Error in line 25: e12u6I A655 18,7
